apps/opencost/service.yaml
# Source: k8s-monitoring/charts/opencost/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencost
  labels:
    app.kubernetes.io/name: opencost
    app.kubernetes.io/instance: opencost
    app.kubernetes.io/version: "1.111.0"
    app.kubernetes.io/part-of: opencost
spec:
  selector:
    app.kubernetes.io/name: opencost
    app.kubernetes.io/instance: opencost
  type: "ClusterIP"
  ports:
    - name: http
      port: 9003
      targetPort: 9003
    - name: http-ui
      port: 9090
      targetPort: 9090
