apps/opencost/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: opencost
spec:
  hosts:
    - opencost.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: opencost.opencost.svc.cluster.local
            port:
              number: 9090
